[gd_scene load_steps=2 format=3 uid="uid://b6qqpst0r6ok8"]

[ext_resource type="Script" path="res://Scripts/Pause.gd" id="1_b33qp"]

[node name="Pause" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b33qp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Selects the window mode"
color = Color(0.180392, 0.164706, 0.164706, 0.368627)

[node name="Reload" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -142.0
offset_right = -126.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "reloads the level"
action_mode = 0
text = "reload scene"
expand_icon = true

[node name="Resolution" type="OptionButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 107.0
offset_top = -151.0
offset_right = 232.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Selects the window size"
alignment = 1
item_count = 11
selected = 8
popup/item_0/text = "640x480"
popup/item_0/id = 0
popup/item_1/text = "800x600"
popup/item_1/id = 1
popup/item_2/text = "1024x768"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3
popup/item_4/text = "1280x800"
popup/item_4/id = 4
popup/item_5/text = "1366x768"
popup/item_5/id = 5
popup/item_6/text = "1440x900"
popup/item_6/id = 6
popup/item_7/text = "1680x1050"
popup/item_7/id = 7
popup/item_8/text = "1920x1080"
popup/item_8/id = 8
popup/item_9/text = "1920x1200"
popup/item_9/id = 9
popup/item_10/text = "2560x1440"
popup/item_10/id = 10

[node name="Window" type="OptionButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 106.0
offset_top = -89.0
offset_right = 232.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Selects the window type"
item_count = 3
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -94.0
offset_right = -141.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
text = "quit game"

[node name="Sensitivity" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SensitivitySlider" type="HSlider" parent="Sensitivity"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = 48.0
offset_right = 221.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
max_value = 4.0
step = 0.1
value = 1.0

[node name="SensitivityLabel" type="Label" parent="Sensitivity"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 124.0
offset_top = 19.0
offset_right = 199.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "Sensitivity"

[node name="SensitivityAmount" type="Label" parent="Sensitivity"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 231.0
offset_top = 44.0
offset_right = 271.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "0.0"

[connection signal="pressed" from="Reload" to="." method="_on_reload_pressed"]
[connection signal="item_selected" from="Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="Sensitivity/SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
